se agrego un parrafo más

--- a/index.html
+++ b/index.html
@@ -28,5 +28,18 @@
             <li>git checkout y pongo el ID del commit (para movernos a un commit)</li>
         </ol>
     </div>
+
+    <div class="dos">
+        <h2>Ramas</h2>
+        <p>Cuando quieras añadir una nueva funcion o solucionar un error generas una nueva rama para alojar estos cambios.
+            "Dividir el codigo" entre lo que es el principal y cambios.. </p>
+        <ul>
+            <li> git branch -l (para ver las ramas que tenes)</li>
+            <li>git branch nombre_de_la_rama</li>
+            <li>git checkout NOMBRE DE LA RAMA</li>
+            <li>git merge nombre de la rama (Para FUSIONAR las ramas con el master)</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
